# libopenblas

./: .gitmodules  COPYRIGHT.txt  Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs
