[package]
name = "openblas_ffi"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "FFI bindings to sequential and parallel OpenBLAS."
repository = "https://github.com/peterhj/libopenblas_ffi"
keywords = ["blas", "openblas"]
#build = "build.rs"

[lib]
name = "openblas_ffi"
path = "src/lib.rs"

[build-dependencies]
walkdir = "^1"

[dependencies]
libc = "^0.2"
